# notion-autotests-mobile

./: README.md  config.local.env.example  config.personal.env.example  config.py  pyproject.toml
notion_autotests_mobile/data/: test.py
notion_autotests_mobile/model/: app.py
notion_autotests_mobile/model/controls/: key_code.py  uiautomator.py
notion_autotests_mobile/model/pages/: authentication.py  page.py
notion_autotests_mobile/utils/: file.py
notion_autotests_mobile/utils/allure/: attach.py
tests/: conftest.py
tests/android/: test_auth.py  test_page.py
